==> TexasInstruments/precision-adc-examples/devices/ads1220/ADS1220.c <==
#include "ADS1220.h"

int ADS1220WaitForDataReady(int Timeout)
{
   if (Timeout > 0)
   {
      /* wait for /DRDY = 1 */
      while (!(P2IN & ADS1220_DRDY) && (Timeout-- >= 0));
      /* wait for /DRDY = 0 */
      while ( (P2IN & ADS1220_DRDY) && (Timeout-- >= 0))         ;
      if (Timeout < 0)
         return 0; /* ADS1220_TIMEOUT_WARNING; */
   }
   else
   {
      /* wait for /DRDY = 1 */
      while (!(P2IN & ADS1220_DRDY));
      /* wait for /DRDY = 0 */
      while ( (P2IN & ADS1220_DRDY));
   }
   return ADS1220_NO_ERROR;
}

void ADS1220AssertCS( int fAssert)
{
   if (fAssert)
		P1OUT &=  ~(ADS1220_CS); 
   else
		P1OUT |=  (ADS1220_CS); 
}

void ADS1220SendByte(unsigned char Byte)
{	char dummy;
	while(!(UCA0IFG&UCTXIFG));
	UCA0TXBUF = Byte;		
	while(!(UCA0IFG&UCRXIFG));
	dummy = UCA0RXBUF;			
   
}

unsigned char ADS1220ReceiveByte(void)
{
   unsigned char Result = 0;
	while(!(UCA0IFG&UCTXIFG));	/* Make sure nothing is currently transmitting */
	UCA0TXBUF = 0xff;		 	/* Send out NOP to initiate SCLK */
	while(!(UCA0IFG&UCRXIFG));	/* Wait until all data is transmitted (received) */
	Result = UCA0RXBUF;			/* Capture the receive buffer */
	return Result;
}
